--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/spedizioni?allowPublicKeyRetrieval=true&useSSL=FALSE&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+
+#Header in cui il backend si aspetta il token
+jwt.header: Authorization
+#chiave segreta utilizzata da jwt
+jwt_secret=REPLACE_THIS_WITH_YOUR_SECRETL
+#periodo di validita del token(s) 2h = 7200000 ms
+jwt.expiration: 7200000
+
+spring.mvc.format.date=yyyy-MM-dd
+debug=false
+logging.level.org.springframework.security=INFO
+spring.websecurity.debug=false
