--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spedizioni?allowPublicKeyRetrieval=true&useSSL=FALSE&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/gestionespedizioni?allowPublicKeyRetrieval=true&useSSL=FALSE&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
